# myPushT

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
assets/envs/so100PushT/: so100.xml  so100_PushT.xml
assets/so100/: human_env.xml  so_arm100.xml  so_arm100_leader.xml  test_env.xml
assets/xml/: simple_pusht.xml
configs/: controller_mapping.json
docs/: README.zh-CN.md
docs/results/: policy_comparison.csv
src/mypusht/: __init__.py  paths.py
src/mypusht/data/: __init__.py  episode_io.py  lerobot_convert.py  pusht_dataset.py  sequence_dataset.py
src/mypusht/envs/: __init__.py  pose_utils.py  simple_pusht_env.py  smoke.py  so100_push_t.py  so100_teleop_env.py
src/mypusht/evaluation/: __init__.py  action_validation.py  adapters.py  aggregate.py  config.py  evaluate.py
src/mypusht/policies/: __init__.py  act.py  bc_cnn.py  bc_mlp.py  diffusion_policy.py  heuristic.py  utils.py
src/mypusht/teleop/: __init__.py  collect.py  config.py  controller.py  preview.py  probe_controller.py  runtime.py
src/mypusht/training/: __init__.py  cli.py  train_act.py  train_bc_cnn.py  train_bc_mlp.py  train_dp.py
tests/: test_action_validation.py  test_lerobot_convert.py  test_policy_utils.py  test_pose_utils.py
