[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypusht"
version = "0.1.0"
description = "A MuJoCo + SO-ARM100 PushT imitation-learning benchmark."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "zzz" }]
keywords = ["robotics", "mujoco", "imitation-learning", "pusht", "so-arm100"]
dependencies = [
  "numpy>=2.2.6",
  "gymnasium>=1.2.2",
  "mujoco>=3.3.7",
  "opencv-python>=4.13",
  "imageio[ffmpeg]>=2.37",
  "torch>=2.7.1",
  "tqdm>=4.67.3",
  "lerobot>=0.4.4",
]

[project.optional-dependencies]
logging = ["wandb>=0.24.2"]
teleop = ["pygame>=2.6.1"]

[project.scripts]
mypusht-collect = "mypusht.teleop.collect:main"
mypusht-convert = "mypusht.data.lerobot_convert:main"
mypusht-train = "mypusht.training.cli:main"
mypusht-eval = "mypusht.evaluation.evaluate:main"
mypusht-aggregate = "mypusht.evaluation.aggregate:main"
mypusht-smoke-env = "mypusht.envs.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
